examples/test/testpolicy6447.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6447
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key10: value15
      key28: value31
      key0: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value0
          key45: value10
      podSelector:
        matchLabels:
          key41: value20
          key17: value14
          key45: value44
